<resources>
    <string name="app_name">BuildUIwithLayoutEditor2</string>
    <string name="Jobtitle">Jobtitle</string>
    <string name="Lastname">Lastname</string>
    <string name="Firstname">Firstname</string>
    <string name="Info">Employee info</string>
    <string name="todo">TODO</string>
    <string name="basic_text">very effective worker. Lorem ipsum dolor sit amet, consectetur
        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
        culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>

</resources>